rename conditionalProbability as probability and change chapter and section conventions

--- a/dataScienceFromScratch/probability/probability.ipynb
+++ b/dataScienceFromScratch/probability/probability.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# PROBABILITY"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false
@@ -17,7 +28,7 @@
     }
    ],
    "source": [
-    "# CONDITIONAL PROBABILITY\n",
+    "# Conditional Probability\n",
     "\n",
     "\"\"\"\n",
     "What is the probability of the event that two children are girls (in some family), conditional on the event that the\n",
@@ -118,7 +129,7 @@
     "def uniform_cdf(x):\n",
     "    if < 0: return 0\n",
     "    elif x < 1: return x\n",
-    "    else: return 1\n"
+    "    else: return 1"
    ]
   },
   {
