--- a/dataScienceFromScratch/statistics/statistics.ipynb
+++ b/dataScienceFromScratch/statistics/statistics.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# STATISTICS"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {
     "collapsed": false
@@ -19,9 +30,7 @@
     }
    ],
    "source": [
-    "# STATISTICS\n",
-    "\n",
-    "# 1) DESCRIBING A SINGLE SET OF DATA \n",
+    "# Describing a Single Set of Data\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from collections import Counter\n",
@@ -90,7 +99,7 @@
     }
    ],
    "source": [
-    "# 2) CENTRAL TENDENCIES\n",
+    "# Central Tendencies\n",
     "\n",
     "def mean(x):\n",
     "    return sum(x) / len(x)\n",
@@ -148,7 +157,7 @@
     }
    ],
    "source": [
-    "# DISPERSION\n",
+    "# Disperson\n",
     "\n",
     "# Dispersion refers to measures of how spread out the data is.\n",
     "# Zero - not spread out at all. Large values - very spread out.\n",
@@ -215,15 +224,6 @@
     "\n",
     "# correlation(num_friends, daily_minutes) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
