--- a/computationalThinkingAndDataScience/KnapsackAndGraphOptimizationProblems/KnapsackAndGraphOptimizationProblems.ipynb
+++ b/computationalThinkingAndDataScience/KnapsackAndGraphOptimizationProblems/KnapsackAndGraphOptimizationProblems.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -90,6 +90,7 @@
     "    \n",
     "    def __str__(self):\n",
     "        result = '<' + self.name + ', ' + str(self.value) + ', ' + str(self.weight) + '>'\n",
+    "        return result\n",
     "\n",
     "def value(item):\n",
     "    return item.getValue()\n",
@@ -104,10 +105,7 @@
     "    \"\"\"Assumes Items a list, maxWeight >= 0,\n",
     "       keyFunction maps elements of Items to numbers\"\"\"\n",
     "    \n",
-    "    print('items ', items)\n",
     "    itemsCopy = sorted(items, key=keyFunction, reverse = True)\n",
-    "    print(itemsCopy)\n",
-    "    print(\"-----\")\n",
     "    result = []\n",
     "    totalValue, totalWeight = 0.0, 0.0\n",
     "    for i in range(len(itemsCopy)):\n",
@@ -115,28 +113,43 @@
     "            result.append(itemsCopy[i])\n",
     "            totalWeight += itemsCopy[i].getWeight()\n",
     "            totalValue += itemsCopy[i].getValue()\n",
-    "    print('result ', result)\n",
     "    return (result, totalValue)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__str__ returned non-string (type NoneType)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-adee61422e76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mtestGreedy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxWeight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdensity\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0mtestGreedys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-44-adee61422e76>\u001b[0m in \u001b[0;36mtestGreedys\u001b[0;34m(maxWeight)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtestGreedys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaxWeight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuildItems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Use greedy by value to fill knapsack of size'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxWeight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mtestGreedy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxWeight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-44-adee61422e76>\u001b[0m in \u001b[0;36mbuildItems\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mItems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mItem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mItems\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mItem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Items '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mItems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __str__ returned non-string (type NoneType)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<clock, 175, 10>\n",
+      "<painting, 90, 9>\n",
+      "<radio, 20, 4>\n",
+      "<vase, 50, 2>\n",
+      "<book, 10, 1>\n",
+      "<computer, 200, 20>\n",
+      "Use greedy by value to fill knapsack of size 20\n",
+      "Total value of items taken is  200.0\n",
+      "<computer, 200, 20>\n",
+      "\n",
+      "Use greedy by weight to fill knapsack of size  20\n",
+      "Total value of items taken is  170.0\n",
+      "<book, 10, 1>\n",
+      "<vase, 50, 2>\n",
+      "<radio, 20, 4>\n",
+      "<painting, 90, 9>\n",
+      "\n",
+      "Use greedy by density to fill knapsack of size  20\n",
+      "Total value of items taken is  255.0\n",
+      "<vase, 50, 2>\n",
+      "<clock, 175, 10>\n",
+      "<book, 10, 1>\n",
+      "<radio, 20, 4>\n"
      ]
     }
    ],
@@ -149,7 +162,6 @@
     "    for i in range(len(values)):\n",
     "        print (Item(names[i], values[i], weights[i]))\n",
     "        Items.append(Item(names[i], values[i], weights[i]))\n",
-    "    print('Items ', Items)\n",
     "    return Items\n",
     "\n",
     "def testGreedy(items, maxWeight, keyFunction):\n",
